--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 asgiref==3.3.1
 certifi==2020.11.8
+cffi==1.15.1
 chardet==3.0.4
 coverage==5.3
+cryptography==42.0.5
 Django==3.1.3
 django-dotenv==1.4.2
 djangorestframework==3.12.2
 idna==2.10
-mysqlclient==2.0.1
+pycparser==2.21
+PyMySQL==1.1.0
 pytz==2020.4
 requests==2.25.0
 sqlparse==0.4.1
